Inv rework: IslandsWarpBrowser finished